# scan-platform-test

./: .env.sample  .gitignore  .gitmodules  LICENCE  README.md  build-dev.sh  build-parallels.sh  build.sh  docker-compose-dev.yml.example  docker-compose.yml  docker-compose.yml.example  grant.sh  make_product_ready_files.sh  send-image.sh  start-dev.sh  start.sh  stop-dev.sh  stop.sh
scan-app/: .env.local.example  .gitignore  Dockerfile  Dockerfile-dev  README.md  docker-compose.yml  next.config.js  package.json  postcss.config.js  tailwind.config.js
scan-app/components/: GoogleAnalytics.js  date.js  date.module.css  edgelist-item.js  eqlist-item.js  graph-viewer.js  graph-viewer.module.css  header.js  layout.js  maplist-item.js  mol-viewer-cd-3d.js  mol-viewer-cd.js  mol-viewer.js  pagination-panel.js  wide-layout.js
scan-mariadb/: .env.sample  .gitignore  README.md  add-new-tables.sh  docker-compose.yml  export.sh  import.sh  init-mysql.sh  start.sh  stop.sh
scan-reverse-proxy/: .env.example  .gitignore  README.md  docker-compose.yml.example
scan_api_internal/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-dev  README.md  app.py  docker-compose-local.yml  docker-compose.yml  env.yaml  grant.py  gunicorn.conf.py  poetry.toml  pyproject.toml  start.sh  stop.sh  update-all.sh  update-edge-structures.sh  update-eq-measures.sh  update-eq-structures.sh  update-map-graphs.sh
scan_api_internal/grrm/: PENDING_DELETION_analysis.py  analysis.py  crud.py  helpers.py  models.py  router.py  schemas.py  utils.py
scan_api_internal/python-scripts/: update-edge-structures_mp.py  update-eq-measures.py  update-eq-structures.py  update-eq-structures_mp.py  update-map-graphs.py
scan_api_internal/scan_analytics/: PENDING_DELETION_router.py
scan_api_internal/service/: database.py
scan_api_internal/test-scripts/: PENDING_DELETION_test-format-conv-smiles.py  PENDING_DELETION_test-format-conv.py  test-format-conv-smiles.py  test-format-conv.py
scan_api_internal/test-scripts/testdata/: PENDING_DELETION_eq0.xyz  PENDING_DELETION_out.mol
scan_api_public/: .env.example  .gitignore  Dockerfile  Dockerfile-dev  Pipfile  README.md  app.py  docker-compose-local.yml  docker-compose.yml
scan_data_observer/: .dockerignore  Dockerfile  Pipfile  observer.py  register.sh
(+57 files in other folders)
